<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateChama">

    <TextView
        android:id="@+id/headlabel"
        android:layout_width="216dp"
        android:layout_height="40dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="44dp"
        android:text="@string/create_chama"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chama_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="108dp"
        android:text="@string/chama_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/create_chama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chama_name"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/freq_payment"
        android:layout_width="155dp"
        android:layout_height="31dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="23dp"
        android:text="@string/frequency_of_payment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_chama" />

    <Spinner
        android:id="@+id/frequency_spinner"
        android:layout_width="197dp"
        android:layout_height="32dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toEndOf="@+id/freq_payment"
        app:layout_constraintTop_toBottomOf="@+id/create_chama" />

    <TextView
        android:id="@+id/contribution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="31dp"
        android:text="@string/amount_to_contribute"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/freq_payment" />

    <EditText
        android:id="@+id/contribution_amt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contribution"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/send_invite"
        android:layout_width="135dp"
        android:layout_height="31dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        android:text="@string/send_invite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contribution_amt" />

    <EditText
        android:id="@+id/member_invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_invite"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/invite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="169dp"
        android:text="@string/invite"
        app:layout_constraintStart_toEndOf="@+id/member_invite"
        app:layout_constraintTop_toBottomOf="@+id/frequency_spinner" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="43dp"
        android:text="@string/create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/member_invite" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="41dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toEndOf="@+id/create_button"
        app:layout_constraintTop_toBottomOf="@+id/invite_button" />
</androidx.constraintlayout.widget.ConstraintLayout>